--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,8 @@
 @use "sass:math";
 
-// Подключение миксинов ===========================================================================================================================================================================================================================================================================
+/* stylelint-disable-next-line CssSyntaxError */
+
+//Подключение миксинов ===========================================================================================================================================================================================================================================================================
 @import "base/mixins";
 
 // Подключение шрифтов ===========================================================================================================================================================================================================================================================================
@@ -9,11 +11,11 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:500,600,700);
 
 // Подключить если есть локальные файлы шрифтов
-//@import "fonts/fonts";
+@import "fonts/fonts";
 
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
-//@import "fonts/icons";
+@import "fonts/icons";
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
 $fontFamily: "Montserrat";
