feat работа над шапкой

--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -27,7 +27,7 @@
 ._icon-compare:before {
   content: "\e903";
 }
-._icon-favorite:before {
+._icon-favorit:before {
   content: "\e904";
 }
 ._icon-footer-clock:before {
@@ -51,9 +51,12 @@
 ._icon-rub:before {
   content: "\e90b";
 }
-._icon-star:before {
+._icon-search:before {
   content: "\e90c";
 }
-._icon-user:before {
+._icon-star:before {
   content: "\e90d";
+}
+._icon-user:before {
+  content: "\e90e";
 }
