--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,5 @@
+/* stylelint-disable CssSyntaxError */
 @use "sass:math";
-
-/* stylelint-disable-next-line CssSyntaxError */
 
 //Подключение миксинов ===========================================================================================================================================================================================================================================================================
 @import "base/mixins";
@@ -21,8 +20,19 @@
 $fontFamily: "Montserrat";
 $fontSize: rem(18); // где 14(px) - размер шрифта по умолчанию из макета
 
+//Настройки шрифта
+
+$fw-s: 500;
+$fw-m: 600;
+$fw-l: 700;
+
 // Основные цвета
 $mainColor: #000; // Цвет шрифта по умолчанию
+$mainDarkColor: #141414;
+$mainTextColorLight: #fff;
+$mainBgColorLight: #ecf1f2;
+$mainBgColorWhite: #fff;
+$accentColor: #e8aa31;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 // Минимальная ширина страницы
