--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,11 +1,11 @@
-.header {
-  &__top {
-  }
-  &__body {
-  }
-  &__catalog {
-  }
-}
+// .header {
+//   &__top {
+//   }
+//   &__body {
+//   }
+//   &__catalog {
+//   }
+// }
 
 //========================================================================================================================================================
 
