--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -71,8 +71,8 @@ body {
     touch-action: none;
   }
   // Сайт загружен
-  .loaded & {
-  }
+  //   .loaded & {
+  //   }
 }
 // Оболочка ============================================================================================================================================================================================================================================================================================================================================================================================================================================
 .wrapper {
