--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -331,8 +331,8 @@
 .sub-menu-catalog {
    &__block {
       display: none;
-
       @for $var from 1 to 6 {
+			//Css for в циле от 1 до 6 для каждого блока
          &_#{$var} {
             //justify-content: start;
             grid-template-columns: repeat($var, minmax(auto, rem(320)));
@@ -345,12 +345,13 @@
    }
 
    &__container {
-      padding: 0px rem(10);
    }
    // .sub-menu-catalog__category
    &__category {
       font-size: rem(16);
       line-height: math.div(20, 16);
+      padding: rem(30) rem(15) rem(30) 0;
+		
       @media (any-hover: hover) {
          &:hover {
             text-decoration: underline;
@@ -378,6 +379,7 @@
    }
 
    &__link-category {
+		padding: rem(10) 0px;
       @include adaptiveValue("font-size", 30, 20, 992, 320);
    }
 
