Feat adaptive header

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -13,11 +13,15 @@
 	padding: rem(10) 0;
 	background-color: $mainDarkColor;
 	color: $mainTextColorLight;
+	
 	&__container {
 		display: flex;
 		align-items: center;
 		gap: rem(20);
 		min-height: rem(50);
+		@media (max-width: $tablet) {
+			gap: rem(30);
+		}
 	}
 
 	&__menu {
@@ -25,23 +29,49 @@
 	}
 
 	&__user {
+		position: relative;
+		z-index: 5;
 		display: inline-flex;
 		align-items: center;
 		font-weight: 600;
 		line-height: math.div(22, 18);
+		gap: em(15, 18);
 		&::before {
 			font-size: rem(28);
-			margin-right: em(15, 28);
+		}
+		@media (any-hover: hover) {
+			&:hover {
+				span {
+					text-decoration: underline;
+					opacity: 0.7;
+				}
+			}
+		}
+		@media (max-width: $tablet) {
+			&::before {
+				font-size: rem(35);
+			}
+			span {
+				display: none;
+			}
 		}
 	}
 }
 
 .menu-top-header {
+
+	@media (max-width: $tablet) {
+		display: none;
+	}
+
 	&__list {
 		display: flex;
-		flex-wrap: wrap;
-		gap: rem(60);
-		@include adaptiveValue("gap", 60, 20);
+		row-gap: 5px;
+		@include adaptiveValue("column-gap", 60, 20);
+		@media (max-width: $tablet) {
+			flex-direction: column;
+			row-gap: 25px;
+		}
 	}
 
 	&__item {
@@ -59,39 +89,75 @@
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
+				opacity: 0.7;
 			}
+		}
+
+		@media (max-width:$tablet){
+			@include adaptiveValue("font-size", 30, 18, 992, 320, 1);
 		}
 
 		&--catalog {
 			display: flex;
+			align-items: center;
 			flex-direction: row-reverse;
 			justify-content: space-between;
 
+			@media (any-hover: hover) {
+				&:hover {
+					text-decoration: none;
+					opacity: 0.7;
+				}
+			}
+
 			&::before {
-				transform: rotate(-90deg);
-				flex: 0 0 rem(14);
-				height: rem(14);
-				font-size: rem(14);
+				flex: 0 0 14px;
+				height: 14px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-size: rem(8);
+				transform: translateY(rem(-2)) rotate(-90deg);
 			}
 		}
 	}
 }
 
 .menu {
+
 	@media (max-width: $tablet) {
-		display: block;
-		flex: 0 0 rem(30);
+		flex: 1 1 auto;
+		display: flex;
+		justify-content: flex-end;
 	}
+
 	&__body {
+		left: -100%;
 		@media (max-width: $tablet) {
 			position: fixed;
 			width: 100%;
 			height: 100%;
 			top: 0;
-			left: 0;
 			overflow: auto;
 			background-color: $mainDarkColor;
+			padding: rem(100) rem(15) rem(50) rem(15);
+			transition: left 0.3s ease 0s;
 			z-index: 4;
+			&::before {
+				content: "";
+				position: fixed;
+				width: 100%;
+				height: 70px;
+				left: -100%;
+				top: 0;
+				background-color: $mainDarkColor;
+			}
+			.menu-open & {
+				left: 0;
+				&::before {
+					left: 0;
+				}
+			}
 		}
 	}
 }
@@ -101,10 +167,16 @@
 .body-header {
 	padding: rem(10) 0;
 	background-color: #ecf1f2;
+
 	&__container {
 		display: flex;
 		min-height: rem(70);
 		align-items: center;
+		@media (max-width: $tablet) {
+			justify-content: space-between;
+		}
+		@media (max-width: $mobileSmall) {
+		}
 	}
 
 	&__logo {
@@ -115,27 +187,41 @@
 	}
 	//.body-header__search
 	&__search {
-		padding-right: rem(20);
 		flex: 1 1 auto;
-		@include adaptiveValue("padding-left", 158, 20, 1620, 1400);
+
+		@media (min-width: $tablet) {
+			padding-right: rem(20);
+		}
+		@media (min-width: $mobileSmall) {
+			@include adaptiveValue("padding-left", 158, 20, 1620, 1250, 1);
+		}
 	}
 }
 
 .search-header {
-	max-width: rem(370);
-	background-color: $mainBgColorLight;
+	background-color: rgba(7, 7, 7, 0.03);
+	border-radius: rem(3);
 	position: relative;
 	border: 1px solid rgba(4, 4, 4, 0.5);
 	border-radius: rem(3);
+
+	@media (min-width: $tablet) {
+		max-width: rem(377);
+	}
+
+	@media (max-width: $mobileSmall) {
+		background-color: #fff;
+	}
 
 	//search-header button
 	&__button {
 		position: absolute;
 		background-color: transparent;
-		display: grid;
-		place-content: center;
-		width: rem(41);
 		height: rem(41);
+		width: rem(41);
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		top: 0;
 		left: rem(8);
 		font-size: rem(14);
@@ -144,12 +230,11 @@
 
 	&__input {
 		width: 100%;
-		height: rem(41);
-		padding: 0px rem(20) 0px rem(50);
-		border-radius: rem(3);
 		background-color: transparent;
+		border-radius: rem(3);
+		height: rem(41);
 		color: $mainColor;
-
+		padding: 0px rem(20) 0px rem(50);
 		&::placeholder {
 			color: rgba(0, 0, 0, 0.5);
 		}
@@ -160,27 +245,29 @@
 .actions-header {
 	display: flex;
 	align-items: center;
-	column-gap: rem(30);
 	@include adaptiveValue("column-gap", 30, 20, 1620, 1000, 1);
 
+	@media (max-width: $tablet) {
+		display: none;
+	}
+
+	// .actions-header__location
 	&__location {
 		display: inline-flex;
 		align-items: center;
 		font-weight: 600;
-
 		@include adaptiveValue("margin-right", 25, 0, 1620, 1400, 1);
-
+		&::before {
+			font-size: rem(24);
+			margin: 0px em(10, 24) 0px 0px;
+		}
 		@media (any-hover: hover) {
 			&:hover {
 				span {
 					text-decoration: underline;
+					opacity: 0.7;
 				}
 			}
-		}
-
-		&::before {
-			font-size: rem(24);
-			margin: 0px em(10, 24) 0px 0px;
 		}
 	}
 
@@ -206,7 +293,6 @@
 		font-weight: 600;
 		white-space: nowrap;
 		line-height: math.div(22, 18);
-
 		&::before {
 			@extend %ic;
 			@extend ._icon-footer-phone;
@@ -216,7 +302,7 @@
 		@media (max-width: $tablet) {
 			font-size: rem(25);
 		}
-
+		
 		@media (max-width: $mobileSmall) {
 			&::before {
 				display: block;
@@ -237,7 +323,6 @@
 		&._spoller-active {
 			transform: rotate(180deg);
 		}
-
 		@media (max-width: $tablet) {
 			display: none;
 		}
@@ -271,13 +356,12 @@
 		font-weight: 700;
 		line-height: math.div(22, 18);
 		color: $accentColor;
-
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
+				opacity: 0.7;
 			}
 		}
-
 		@media (max-width: $tablet) {
 			display: none;
 		}
@@ -332,6 +416,7 @@
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
+				opacity: 0.7;
 			}
 		}
 	}
@@ -348,53 +433,93 @@
 //========================================================================================================================================================
 
 .menu-catalog {
+
+	@media (max-width: $tablet) {
+		position: fixed;
+		top: 0;
+		left: -100%;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: $mainDarkColor;
+		padding: rem(25) rem(15) rem(50) rem(15);
+		transition: left 0.3s ease 0s;
+		.catalog-open & {
+			left: 0;
+			z-index: 6;
+		}
+	}
 	&__list {
 		display: flex;
-		gap: rem(10);
+		column-gap: 10px;
 		justify-content: space-between;
+		@media (max-width: $tablet) {
+			flex-direction: column;
+			row-gap: rem(25);
+		}
 	}
 
 	&__link {
-		min-height: rem(70);
-		padding: 0 rem(10);
 		display: flex;
-		justify-content: center;
-		align-items: center;
-		text-align: center;
 		position: relative;
-
+		transition: color 0.3s ease 0s;
+		&[data-parent] {
+			&::before {
+				@extend %ic;
+				@extend ._icon-arrow-bottom;
+				display: none;
+				@media (max-width: $tablet) {
+					transform: translateY(rem(5)) rotate(-90deg);
+					display: block;
+					font-size: rem(10);
+				}
+			}
+			@media (max-width: $tablet) {
+				display: flex;
+				width: 100%;
+				flex-direction: row-reverse;
+				justify-content: space-between;
+			}
+		}
+		@media (min-width: $tablet) {
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			min-height: rem(70);
+			padding: 0px rem(10);
+		}
 		&::after {
 			content: "";
-			position: absolute;
 			opacity: 0;
 			visibility: hidden;
+			position: absolute;
 			bottom: 0;
 			left: rem(10);
-			width: calc(100% - rem(20));
-			height: rem(1);
+			height: 1px;
 			background-color: $accentColor;
-			transition: color 0.3s ease 0s;
+			width: calc(100% - rem(20));
+			transition: all 0.3s ease 0s;
 		}
-
 		@media (any-hover: hover) {
 			&:hover {
 				color: $accentColor;
-
 				&::after {
 					opacity: 1;
 					visibility: visible;
 				}
 			}
 		}
-
-		&._sub-menu-active {
-			color: $accentColor;
-			transition: all 0.3s ease 0s;
-
-			&::after {
-				opacity: 1;
-				visibility: visible;
+		@media (min-width: $tablet) {
+			&._sub-menu-active {
+				color: $accentColor;
+				&::after {
+					opacity: 1;
+					visibility: visible;
+				}
 			}
+		}
+		@media (max-width: $tablet) {
+			@include adaptiveValue("font-size", 30, 20, 992, 320, 1);
 		}
 	}
 
@@ -404,34 +529,93 @@
 		top: 100%;
 		background-color: $mainDarkColor;
 	}
+
+	&__back {
+		display: none;
+		@media (max-width: $tablet) {
+			display: inline-flex;
+			align-items: center;
+			@include adaptiveValue("font-size", 30, 20, 992, 320, 1);
+			&:not(:last-child) {
+				margin-bottom: em(65, 30);
+			}
+			&::before {
+				margin: 0px em(13, 30) 0px 0px;
+			}
+		}
+	}
 }
 .sub-menu-catalog {
+
+	@media (max-width: $tablet) {
+		position: fixed;
+		top: 0;
+		left: -100%;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: $mainDarkColor;
+		padding: rem(25) rem(15) rem(50) rem(15);
+		transition: left 0.3s ease 0s;
+		.sub-menu-open & {
+			display: block;
+			left: 0;
+			z-index: 6;
+		}
+	}
+
+	&__back {
+		display: none;
+		@media (max-width: $tablet) {
+			display: inline-flex;
+			align-items: center;
+			@include adaptiveValue("font-size", 30, 20, 992, 320, 1);
+			&:not(:last-child) {
+				margin-bottom: em(65, 30);
+			}
+			&::before {
+				margin: 0px em(13, 30) 0px 0px;
+			}
+		}
+	}
+
 	&__block {
 		display: none;
 		@for $var from 1 to 6 {
-			//Css for в циле от 1 до 6 для каждого блока
 			&_#{$var} {
 				//justify-content: start;
 				grid-template-columns: repeat($var, minmax(auto, rem(320)));
 			}
 		}
-
 		&._sub-menu-open {
 			display: grid;
+			@media (max-width: $tablet) {
+				display: block;
+			}
 		}
 	}
 
-	// &__container {
-	// }
+	&__container {
+		padding: 0px rem(10);
+	}
 	// .sub-menu-catalog__category
 	&__category {
 		font-size: rem(16);
 		line-height: math.div(20, 16);
-		padding: rem(30) rem(15) rem(30) 0;
 
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
+				opacity: 0.7;
+			}
+		}
+		@media (min-width: $tablet) {
+			font-weight: 700;
+			padding: rem(30) rem(15) rem(30) 0;
+		}
+		@media (max-width: $tablet) {
+			&:not(:last-child) {
+				margin-bottom: em(25, 16);
 			}
 		}
 	}
@@ -443,6 +627,9 @@
 		padding: rem(30) rem(15) rem(30) 0;
 		border-top: 1px solid rgba(255, 255, 255, 0.3);
 		border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+		@media (max-width: $tablet) {
+			display: none;
+		}
 	}
 	// .sub-menu-catalog__link
 	&__link {
@@ -451,12 +638,12 @@
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
+				opacity: 0.7;
 			}
 		}
 	}
 
 	&__link-category {
-		padding: rem(10) 0px;
 		@include adaptiveValue("font-size", 30, 20, 992, 320);
 	}
 
@@ -473,6 +660,7 @@
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
+				opacity: 0.7;
 			}
 		}
 	}
