--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -10,10 +10,10 @@
 //========================================================================================================================================================
 
 .top-header {
-	padding: rem(10) 0;
 	background-color: $mainDarkColor;
-	color: $mainTextColorLight;
-	
+	color: #fff;
+	padding: rem(10) 0;
+	// .top-header__container
 	&__container {
 		display: flex;
 		align-items: center;
@@ -23,11 +23,11 @@
 			gap: rem(30);
 		}
 	}
-
+	// .top-header__menu
 	&__menu {
 		flex: 1 1 auto;
 	}
-
+	// .top-header__user
 	&__user {
 		position: relative;
 		z-index: 5;
@@ -43,7 +43,6 @@
 			&:hover {
 				span {
 					text-decoration: underline;
-					opacity: 0.7;
 				}
 			}
 		}
@@ -57,13 +56,8 @@
 		}
 	}
 }
-
 .menu-top-header {
-
-	@media (max-width: $tablet) {
-		display: none;
-	}
-
+	// ..menu-top-header__list
 	&__list {
 		display: flex;
 		row-gap: 5px;
@@ -73,43 +67,28 @@
 			row-gap: 25px;
 		}
 	}
-
+	// ..menu-top-header__item
 	&__item {
-		&--catalog {
-			@media (max-width: $tablet) {
+		&_catalog {
+			@media (min-width: $tablet) {
 				display: none;
 			}
 		}
 	}
-
+	// ..menu-top-header__link
 	&__link {
 		font-size: rem(16);
 		line-height: math.div(20, 16);
-		//hhv snippet
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
-				opacity: 0.7;
 			}
 		}
-
-		@media (max-width:$tablet){
-			@include adaptiveValue("font-size", 30, 18, 992, 320, 1);
-		}
-
 		&--catalog {
 			display: flex;
 			align-items: center;
 			flex-direction: row-reverse;
 			justify-content: space-between;
-
-			@media (any-hover: hover) {
-				&:hover {
-					text-decoration: none;
-					opacity: 0.7;
-				}
-			}
-
 			&::before {
 				flex: 0 0 14px;
 				height: 14px;
@@ -120,17 +99,17 @@
 				transform: translateY(rem(-2)) rotate(-90deg);
 			}
 		}
+		@media (max-width: $tablet) {
+			@include adaptiveValue("font-size", 30, 20, 992, 320, 1);
+		}
+	}
+	@media (max-width: $tablet) {
+		display: none;
 	}
 }
 
 .menu {
-
-	@media (max-width: $tablet) {
-		flex: 1 1 auto;
-		display: flex;
-		justify-content: flex-end;
-	}
-
+	// .menu__body
 	&__body {
 		left: -100%;
 		@media (max-width: $tablet) {
@@ -160,6 +139,11 @@
 			}
 		}
 	}
+	@media (max-width: $tablet) {
+		flex: 1 1 auto;
+		display: flex;
+		justify-content: flex-end;
+	}
 }
 
 //========================================================================================================================================================
@@ -167,7 +151,7 @@
 .body-header {
 	padding: rem(10) 0;
 	background-color: #ecf1f2;
-
+	// .body-header__container
 	&__container {
 		display: flex;
 		min-height: rem(70);
@@ -178,14 +162,14 @@
 		@media (max-width: $mobileSmall) {
 		}
 	}
-
+	// .body-header__logo
 	&__logo {
 		@extend %ic;
 		@extend ._icon-logo;
 		font-size: rem(42);
 		color: $mainDarkColor;
 	}
-	//.body-header__search
+	// .body-header__search
 	&__search {
 		flex: 1 1 auto;
 
@@ -203,17 +187,10 @@
 	border-radius: rem(3);
 	position: relative;
 	border: 1px solid rgba(4, 4, 4, 0.5);
-	border-radius: rem(3);
-
 	@media (min-width: $tablet) {
 		max-width: rem(377);
 	}
-
-	@media (max-width: $mobileSmall) {
-		background-color: #fff;
-	}
-
-	//search-header button
+	// .search-header__button
 	&__button {
 		position: absolute;
 		background-color: transparent;
@@ -227,7 +204,7 @@
 		font-size: rem(14);
 		color: rgba(0, 0, 0, 0.5);
 	}
-
+	// .search-header__input
 	&__input {
 		width: 100%;
 		background-color: transparent;
@@ -239,18 +216,19 @@
 			color: rgba(0, 0, 0, 0.5);
 		}
 	}
+	@media (max-width: $mobileSmall) {
+		background-color: #fff;
+	}
 }
 
 //action-header
 .actions-header {
 	display: flex;
 	align-items: center;
-	@include adaptiveValue("column-gap", 30, 20, 1620, 1000, 1);
-
 	@media (max-width: $tablet) {
 		display: none;
 	}
-
+	@include adaptiveValue("column-gap", 30, 20, 1620, 1000, 1);
 	// .actions-header__location
 	&__location {
 		display: inline-flex;
@@ -265,18 +243,21 @@
 			&:hover {
 				span {
 					text-decoration: underline;
-					opacity: 0.7;
 				}
 			}
 		}
 	}
-
+	// .actions-header__phones
+	&__phones {
+	}
+	// .actions-header__favorite
 	&__favorite {
+		position: relative;
+		z-index: 5;
 		font-size: rem(27);
 	}
-
-	&__card {
-		flex: 0 0 auto;
+	// .actions-header__cart
+	&__cart {
 	}
 }
 //========================================================================================================================================================
@@ -426,14 +407,17 @@
 //catalog-header
 
 .catalog-header {
-	background-color: $mainDarkColor;
-	color: $mainTextColorLight;
 	position: relative;
+	background-color: $mainDarkColor;
+	color: #fff;
+
+	@media (max-width: $mobileSmall) {
+		padding: rem(20) 0;
+	}
 }
 //========================================================================================================================================================
 
 .menu-catalog {
-
 	@media (max-width: $tablet) {
 		position: fixed;
 		top: 0;
@@ -449,6 +433,7 @@
 			z-index: 6;
 		}
 	}
+	// .menu-catalog__list
 	&__list {
 		display: flex;
 		column-gap: 10px;
@@ -458,7 +443,10 @@
 			row-gap: rem(25);
 		}
 	}
-
+	// .menu-catalog__item
+	&__item {
+	}
+	// .menu-catalog__link
 	&__link {
 		display: flex;
 		position: relative;
@@ -522,14 +510,13 @@
 			@include adaptiveValue("font-size", 30, 20, 992, 320, 1);
 		}
 	}
-
+	// .menu-catalog__sub-menu
 	&__sub-menu {
 		width: 100%;
 		left: 0;
 		top: 100%;
 		background-color: $mainDarkColor;
 	}
-
 	&__back {
 		display: none;
 		@media (max-width: $tablet) {
@@ -546,7 +533,6 @@
 	}
 }
 .sub-menu-catalog {
-
 	@media (max-width: $tablet) {
 		position: fixed;
 		top: 0;
@@ -563,7 +549,6 @@
 			z-index: 6;
 		}
 	}
-
 	&__back {
 		display: none;
 		@media (max-width: $tablet) {
@@ -578,7 +563,7 @@
 			}
 		}
 	}
-
+	// .sub-menu-catalog__block
 	&__block {
 		display: none;
 		@for $var from 1 to 6 {
@@ -594,7 +579,6 @@
 			}
 		}
 	}
-
 	&__container {
 		padding: 0px rem(10);
 	}
@@ -606,7 +590,6 @@
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
-				opacity: 0.7;
 			}
 		}
 		@media (min-width: $tablet) {
@@ -631,6 +614,9 @@
 			display: none;
 		}
 	}
+	// .sub-menu-catalog__item
+	&__item {
+	}
 	// .sub-menu-catalog__link
 	&__link {
 		font-size: rem(16);
@@ -638,15 +624,14 @@
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
-				opacity: 0.7;
 			}
 		}
 	}
-
+	// .sub-menu-catalog__link-category
 	&__link-category {
 		@include adaptiveValue("font-size", 30, 20, 992, 320);
 	}
-
+	// .sub-menu-catalog__footer
 	&__footer {
 		padding: rem(30) rem(15) rem(30) 0;
 		@media (max-width: $tablet) {
@@ -660,7 +645,6 @@
 		@media (any-hover: hover) {
 			&:hover {
 				text-decoration: underline;
-				opacity: 0.7;
 			}
 		}
 	}
@@ -710,5 +694,14 @@
 				transform: rotate(45deg);
 			}
 		}
+	}
+}
+
+.block {
+	&::before {
+		content: "";
+		width: 50px;
+		height: 50px;
+		background-color: orange;
 	}
 }
